--- a/styles/ext.css
+++ b/styles/ext.css
@@ -1,7 +1,3 @@
-.content-header__item--controls {
-    position: relative
-}
-
 .x-vc-rm-item-btn {
     width: 20px;
     padding: 0;
@@ -12,12 +8,13 @@
     z-index: 10000000;
     cursor: pointer;
     font-size: 24px;
-    display: flex;
     height: 1.5rem;
-    position: absolute;
-    right: 24px;
-    top: -1px;
-    align-items: center;
+    line-height: 24px;
+    margin-right: 10px;
+}
+
+.x-vc-rm-item-btn_alone {
+    margin: 0;
 }
 
 .x-vc-rm-item-btn:hover {
