--- a/styles/ext.css
+++ b/styles/ext.css
@@ -25,6 +25,7 @@
     background: -3px center / 22px no-repeat url("chrome-extension://__MSG_@@extension_id__/images/sidebar-icon.png");
     padding-left: 30px;
     margin-left: -30px;
+    user-select: none;
 }
 
 .x-vc-dialog {
